--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.card.CreateCard">
 
     <ImageView
-        android:id="@+id/testImage"
+        android:id="@+id/cardCreate"
         android:layout_width="307dp"
         android:layout_height="218dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,7 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.196"
-        app:srcCompat="@drawable/bank_card" />
+        app:srcCompat="@drawable/blue_card"
+        tools:ignore="ContentDescription" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/homeBottomAppBar"
@@ -28,8 +29,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/greeting"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="BottomAppBar" />
 
     <ImageButton
         android:id="@+id/homeImageButton"
@@ -45,7 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
         app:srcCompat="@drawable/icons8_home_page_48"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/homescreen" />
 
     <ImageButton
         android:id="@+id/graphImageButton"
@@ -58,7 +59,8 @@
         app:layout_constraintEnd_toStartOf="@+id/poundImageButton"
         app:layout_constraintStart_toEndOf="@+id/homeImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
-        app:srcCompat="@drawable/icons8_combo_chart_48" />
+        app:srcCompat="@drawable/icons8_combo_chart_48"
+        android:contentDescription="@string/analytics" />
 
     <ImageButton
         android:id="@+id/poundImageButton"
@@ -73,7 +75,8 @@
         app:layout_constraintEnd_toStartOf="@+id/cardImageButton"
         app:layout_constraintStart_toEndOf="@+id/graphImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
-        app:srcCompat="@drawable/icons8_money_pound_48" />
+        app:srcCompat="@drawable/icons8_money_pound_48"
+        android:contentDescription="@string/transfers" />
 
     <ImageButton
         android:id="@+id/cardImageButton"
@@ -86,7 +89,8 @@
         app:layout_constraintEnd_toStartOf="@+id/gearsImageButton"
         app:layout_constraintStart_toEndOf="@+id/poundImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
-        app:srcCompat="@drawable/icons8_debit_card_48" />
+        app:srcCompat="@drawable/icons8_debit_card_48"
+        android:contentDescription="@string/cards" />
 
     <ImageButton
         android:id="@+id/gearsImageButton"
@@ -101,14 +105,15 @@
         app:layout_constraintEnd_toEndOf="@+id/homeBottomAppBar"
         app:layout_constraintStart_toEndOf="@+id/cardImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
-        app:srcCompat="@drawable/icons8_automation_48" />
+        app:srcCompat="@drawable/icons8_automation_48"
+        android:contentDescription="@string/settings" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="addCardOnClick"
-        android:text="Add Card"
+        android:text="@string/add_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
