--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -80,17 +80,17 @@
 
     <ImageButton
         android:id="@+id/cardImageButton"
-        android:onClick="cardButtonOnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="#0000"
+        android:clickable="false"
+        android:contentDescription="@string/cards"
         app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
         app:layout_constraintEnd_toStartOf="@+id/gearsImageButton"
         app:layout_constraintStart_toEndOf="@+id/poundImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
-        app:srcCompat="@drawable/icons8_debit_card_48"
-        android:contentDescription="@string/cards" />
+        app:srcCompat="@drawable/icons8_debit_card_48" />
 
     <ImageButton
         android:id="@+id/gearsImageButton"
@@ -109,7 +109,7 @@
         android:contentDescription="@string/settings" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addCardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="addCardOnClick"
