--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -10,11 +10,12 @@
         android:id="@+id/cardCreate"
         android:layout_width="307dp"
         android:layout_height="218dp"
+        android:rotation="270"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196"
+        app:layout_constraintVertical_bias="0.281"
         app:srcCompat="@drawable/blue_card"
         tools:ignore="ContentDescription" />
 
@@ -116,6 +117,8 @@
         android:text="@string/add_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.723" />
 </androidx.constraintlayout.widget.ConstraintLayout>
