--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -8,15 +8,15 @@
 
     <TextView
         android:id="@+id/myDate"
-        android:layout_width="247dp"
-        android:layout_height="47dp"
+        android:layout_width="132dp"
+        android:layout_height="42dp"
         android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintVertical_bias="0.139" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.143" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/homeBottomAppBar"
@@ -113,17 +113,6 @@
         app:layout_constraintVertical_bias="0.432"
         tools:layout_editor_absoluteX="24dp" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="426dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Calendar"
-        android:textSize="23sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
-
     <Button
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
@@ -149,5 +138,15 @@
         app:layout_constraintStart_toEndOf="@+id/button_cancel"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.918" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calendar"
+        android:textStyle="bold"
+        android:textSize="23sp"
+        tools:layout_editor_absoluteX="9dp"
+        tools:layout_editor_absoluteY="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
