--- a/app/src/main/res/layout/activity_datetransfer.xml
+++ b/app/src/main/res/layout/activity_datetransfer.xml
@@ -34,7 +34,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="411dp"
             android:layout_height="578dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@android:color/darker_gray"
             android:padding="4dp"
             android:scrollbars="vertical" />
 
