--- a/app/src/main/res/layout/stubank_fragment.xml
+++ b/app/src/main/res/layout/stubank_fragment.xml
@@ -76,7 +76,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:inputType="phone"/>
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/reference"
+            android:id="@+id/referenceStubank"
             android:layout_width="329dp"
             android:layout_height="44dp"
             android:layout_marginTop="120dp"
