--- a/app/src/main/res/layout/activity_transfer_to_others.xml
+++ b/app/src/main/res/layout/activity_transfer_to_others.xml
@@ -44,4 +44,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="207dp"
+        tools:layout_editor_absoluteY="191dp" />
+<LinearLayout
+    android:id="@+id/linearLayoutTransactions"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginTop="150dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
