--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -13,7 +13,7 @@
 
 <EditText
     android:id="@+id/amountDialog"
-    android:inputType="number"
+    android:inputType="numberDecimal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
