--- a/app/src/main/res/layout/activity_transfer_complete.xml
+++ b/app/src/main/res/layout/activity_transfer_complete.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransferComplete">
+    tools:context=".ui.pound.TransferComplete">
 
     <TextView
         android:id="@+id/textView11"
