--- a/app/src/main/res/layout/other_fragment.xml
+++ b/app/src/main/res/layout/other_fragment.xml
@@ -124,7 +124,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/checkBoxOther"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
