adding app icon, changing app name, adding strings

--- a/app/src/main/res/layout/activity_choose_pin_for_new_card.xml
+++ b/app/src/main/res/layout/activity_choose_pin_for_new_card.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.card.ChoosePinForNewCardPage">
+    tools:context=".ui.card.ChoosePinForNewCardPage"
+    tools:ignore="LabelFor">
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/homeBottomAppBar"
@@ -108,7 +109,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/PIN"
@@ -123,7 +125,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.352" />
+        app:layout_constraintVertical_bias="0.352"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/confirmNewCard"
@@ -148,11 +151,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/PINtextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="302dp"
-        android:text="PIN"
+        android:text="@string/pin"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,11 +163,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/ConfirmPINtextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
-        android:text="Confirm PIN"
+        android:text="@string/confirm_pin"
         android:textAlignment="textStart"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
